@@ -183,7 +183,6 @@ public class FlatNodeGenFactory {
     private final TruffleTypes types = ProcessorContext.getInstance().getTypes();
     private final NodeData node;
     private final TypeSystemData typeSystem;
-    private final TypeMirror genericType;
     private final Set<TypeMirror> expectedTypes = new HashSet<>();
     private final Collection<NodeData> sharingNodes;
 
@@ -205,6 +204,7 @@ public class FlatNodeGenFactory {
     private final Map<ExecutableElement, Function<Call, DSLExpression>> substitutions = new LinkedHashMap<>();
     private final StaticConstants constants;
     private NodeConstants nodeConstants;
+    private final NodeGeneratorPlugs plugs;
 
     private final GeneratorMode generatorMode;
     private final NodeStateResult state;
@@ -215,8 +215,8 @@ public class FlatNodeGenFactory {
     }
 
     public FlatNodeGenFactory(ProcessorContext context, GeneratorMode mode, NodeData node,
-                    StaticConstants constants, NodeConstants nodeConstants) {
-        this(context, mode, node, Arrays.asList(node), node.getSharedCaches(), constants, nodeConstants);
+                    StaticConstants constants, NodeConstants nodeConstants, NodeGeneratorPlugs plugs) {
+        this(context, mode, node, Arrays.asList(node), node.getSharedCaches(), constants, nodeConstants, plugs);
     }
 
     @SuppressWarnings("this-escape")
@@ -224,14 +224,15 @@ public class FlatNodeGenFactory {
                     Collection<NodeData> stateSharingNodes,
                     Map<CacheExpression, String> sharedCaches,
                     StaticConstants constants,
-                    NodeConstants nodeConstants) {
+                    NodeConstants nodeConstants,
+                    NodeGeneratorPlugs plugs) {
         Objects.requireNonNull(node);
+        this.plugs = plugs;
         this.generatorMode = mode;
         this.context = context;
         this.sharingNodes = stateSharingNodes;
         this.node = node;
         this.typeSystem = node.getTypeSystem();
-        this.genericType = context.getType(Object.class);
         this.boxingEliminationEnabled = !TruffleProcessorOptions.generateSlowPathOnly(context.getEnvironment());
         this.primaryNode = stateSharingNodes.iterator().next() == node;
         this.sharedCaches = sharedCaches;
@@ -265,7 +266,7 @@ public class FlatNodeGenFactory {
     }
 
     public static List<InlineFieldData> createInlinedFields(NodeData node) {
-        FlatNodeGenFactory factory = new FlatNodeGenFactory(ProcessorContext.getInstance(), GeneratorMode.DEFAULT, node, new StaticConstants(), new NodeConstants());
+        FlatNodeGenFactory factory = new FlatNodeGenFactory(ProcessorContext.getInstance(), GeneratorMode.DEFAULT, node, new StaticConstants(), new NodeConstants(), NodeGeneratorPlugs.DEFAULT);
         return factory.createInlineFields(true);
     }
 
@@ -576,7 +577,7 @@ public class FlatNodeGenFactory {
         }
 
         if (specialization == null) {
-            throw new AssertionError("if specialization is null it must be shared cache");
+            throw new AssertionError("if specialization is null it must be shared cache: " + specialization + " " + cache + " " + sharedCaches);
         }
 
         Parameter parameter = cache.getParameter();
@@ -1157,6 +1158,17 @@ public class FlatNodeGenFactory {
 
             if (isGenerateAOT()) {
                 generateAOT(inlined, true);
+            }
+
+            if (!node.isGenerateCached()) {
+                // if no cached node is generated we need to generate the expect methods
+                // in the inlined node.
+                for (TypeMirror type : uniqueSortedTypes(expectedTypes, false)) {
+                    if (!typeSystem.hasType(type)) {
+                        clazz.addOptional(TypeSystemCodeGenerator.createExpectMethod(PRIVATE, typeSystem,
+                                        context.getType(Object.class), type));
+                    }
+                }
             }
 
             generateStatisticsFields(inlined);
@@ -1785,7 +1797,7 @@ public class FlatNodeGenFactory {
                 }
 
                 builder.startStatement().startCall("cached", "add");
-                builder.startStaticCall(context.getType(List.class), "of");
+                builder.startStaticCall(context.getType(Arrays.class), "<Object>asList");
                 for (CacheExpression cache : specialization.getCaches()) {
                     if (cache.isAlwaysInitialized()) {
                         continue;
@@ -2670,8 +2682,10 @@ public class FlatNodeGenFactory {
             }
 
             TypeMirror returnType = forType.getReturnType();
-            if (!isVoid(returnType) && !isSubtypeBoxed(context, specialization.getReturnType().getType(), returnType) &&
-                            !isSubtypeBoxed(context, returnType, specialization.getReturnType().getType())) {
+
+            TypeMirror type = specialization.lookupBoxingOverloadReturnType(forType);
+            if (!isVoid(returnType) && !isSubtypeBoxed(context, type, returnType) &&
+                            !isSubtypeBoxed(context, returnType, type)) {
                 continue outer;
             }
             filteredSpecializations.add(specialization);
@@ -2680,12 +2694,12 @@ public class FlatNodeGenFactory {
         return filteredSpecializations;
     }
 
-    private List<SpecializationData> filterImplementedSpecializations(List<SpecializationData> specializations, TypeMirror expectedReturnType) {
+    private List<SpecializationData> filterImplementedSpecializations(List<SpecializationData> specializations, ExecutableTypeData forType) {
         List<SpecializationData> filteredSpecializations = new ArrayList<>();
-        TypeMirror returnType = boxType(context, expectedReturnType);
+        TypeMirror returnType = boxType(context, forType.getReturnType());
 
         for (SpecializationData specialization : specializations) {
-            TypeMirror specializationReturnType = boxType(context, specialization.getReturnType().getType());
+            TypeMirror specializationReturnType = boxType(context, specialization.lookupBoxingOverloadReturnType(forType));
             if (typeEquals(specializationReturnType, returnType)) {
                 filteredSpecializations.add(specialization);
             }
@@ -2717,6 +2731,28 @@ public class FlatNodeGenFactory {
         return compatible;
     }
 
+    public CodeExecutableElement createExecuteMethod(CodeTypeElement clazz, CodeExecutableElement baseMethod,
+                    List<SpecializationData> specializations, boolean skipStateChecks) {
+        final List<SpecializationData> allSpecializations = specializations;
+        int signatureSize = node.getPolymorphicExecutable().getSignatureParameters().size();
+        ExecutableTypeData type = new ExecutableTypeData(node, baseMethod, signatureSize, List.of(node.getFrameType()), false);
+
+        List<SpecializationData> implementedSpecializations = allSpecializations;
+        CodeExecutableElement method = createExecuteMethod(type);
+        FrameState frameState = FrameState.load(this, type, Integer.MAX_VALUE, NodeExecutionMode.FAST_PATH, method);
+        if (type.getMethod() == null) {
+            frameState.addParametersTo(method, Integer.MAX_VALUE, FRAME_VALUE);
+        } else {
+            renameOriginalParameters(type, method, frameState);
+        }
+        clazz.add(method);
+        CodeTreeBuilder builder = method.createBuilder();
+        SpecializationGroup group = SpecializationGroup.create(implementedSpecializations);
+        frameState.setSkipStateChecks(skipStateChecks);
+        builder.tree(createFastPath(builder, implementedSpecializations, group, type, frameState));
+        return method;
+    }
+
     private CodeExecutableElement createExecute(CodeTypeElement clazz, ExecutableTypeData type, List<ExecutableTypeData> delegateableTypes, boolean inlined) {
         final List<SpecializationData> allSpecializations = node.getReachableSpecializations();
         final List<SpecializationData> compatibleSpecializations = filterCompatibleSpecializations(allSpecializations, type);
@@ -2724,7 +2760,7 @@ public class FlatNodeGenFactory {
         if (delegateableTypes.isEmpty()) {
             implementedSpecializations = compatibleSpecializations;
         } else {
-            implementedSpecializations = filterImplementedSpecializations(compatibleSpecializations, type.getReturnType());
+            implementedSpecializations = filterImplementedSpecializations(compatibleSpecializations, type);
         }
 
         CodeExecutableElement method = createExecuteMethod(type);
@@ -2868,7 +2904,7 @@ public class FlatNodeGenFactory {
 
                 if (delegateType != null) {
                     List<SpecializationData> delegateSpecializations = filterImplementedSpecializations(
-                                    filterCompatibleSpecializations(node.getReachableSpecializations(), delegateType), delegateType.getReturnType());
+                                    filterCompatibleSpecializations(node.getReachableSpecializations(), delegateType), delegateType);
                     coversAllSpecializations = delegateSpecializations.size() == node.getReachableSpecializations().size();
                     if (!coversAllSpecializations) {
                         builder.tree(multiState.createLoadFastPath(frameState, delegateSpecializations));
@@ -2929,7 +2965,7 @@ public class FlatNodeGenFactory {
             builder.startTryBlock();
             builder.tree(delegateBuilder.build());
             builder.end().startCatchBlock(types.UnexpectedResultException, "ex");
-            builder.tree(createTransferToInterpreterAndInvalidate());
+            builder.tree(plugs.createTransferToInterpreterAndInvalidate());
 
             if (isVoid(type.getReturnType())) {
                 builder.returnStatement();
@@ -3263,12 +3299,8 @@ public class FlatNodeGenFactory {
         List<LocalVariable> locals = new ArrayList<>();
         for (NodeExecutionData execution : node.getChildExecutions()) {
             NodeChildData child = execution.getChild();
+            nodes.add(plugs.createNodeChildReferenceForException(this, frameState, execution, child));
             LocalVariable var = frameState.getValue(execution);
-            if (child != null && !frameState.getMode().isUncached()) {
-                nodes.add(accessNodeField(execution));
-            } else {
-                nodes.add("null");
-            }
             if (var != null) {
                 locals.add(var);
             }
@@ -3330,6 +3362,15 @@ public class FlatNodeGenFactory {
         }
         builder.trees(locals.stream().map(localMapper).toArray(CodeTree[]::new));
         builder.end();
+    }
+
+    @SuppressWarnings("unused")
+    String createNodeChildReferenceForException(final FrameState frameState, NodeExecutionData execution, NodeChildData child) {
+        if (child != null && !frameState.getMode().isUncached()) {
+            return accessNodeField(execution);
+        } else {
+            return "null";
+        }
     }
 
     private CodeTree createFastPath(CodeTreeBuilder parent, List<SpecializationData> allSpecializations, SpecializationGroup originalGroup, final ExecutableTypeData currentType,
@@ -3433,7 +3474,7 @@ public class FlatNodeGenFactory {
         int parameterIndex = 0;
         for (BitSet set : multiState.getSets()) {
             LocalVariable local = frameState.get(set.getName());
-            if (local != null && MultiStateBitSet.isRelevantForFastPath(set, specializations)) {
+            if (local != null && MultiStateBitSet.isRelevantForFastPath(frameState, set, specializations)) {
                 CodeVariableElement var = (CodeVariableElement) method.getParameters().get(parameterIndex);
                 String oldName = var.getName();
                 String newName = var.getName() + "__";
@@ -3498,7 +3539,7 @@ public class FlatNodeGenFactory {
         builder.tree(visitSpecializationGroup(builder, null, group, currentType, frameState, allowedSpecializations));
 
         if (group.hasFallthrough()) {
-            builder.tree(createTransferToInterpreterAndInvalidate());
+            builder.tree(plugs.createTransferToInterpreterAndInvalidate());
             builder.tree(createCallExecuteAndSpecialize(currentType, originalFrameState));
         }
         generateTraceOnExceptionEnd(builder);
@@ -3591,23 +3632,7 @@ public class FlatNodeGenFactory {
         if (var == null) {
             TypeMirror targetType;
 
-            TypeGuard eliminatedGuard = null;
-            if (boxingEliminationEnabled) {
-                for (TypeGuard checkedGuard : group.getTypeGuards()) {
-                    if (!isPrimitive(checkedGuard.getType())) {
-                        // no elimination for non primitive types
-                        continue;
-                    } else if (node.getChildExecutions().get(checkedGuard.getSignatureIndex()).getChild().findExecutableType(checkedGuard.getType()) == null) {
-                        // type cannot be executed so it cannot be eliminated
-                        continue;
-                    }
-
-                    if (checkedGuard.getSignatureIndex() == execution.getIndex()) {
-                        eliminatedGuard = checkedGuard;
-                        break;
-                    }
-                }
-            }
+            TypeGuard eliminatedGuard = findBoxingEliminationGuard(group, execution);
             if (eliminatedGuard != null) {
                 // we can optimize the type guard away by executing it
                 group.getTypeGuards().remove(eliminatedGuard);
@@ -3615,6 +3640,7 @@ public class FlatNodeGenFactory {
             } else {
                 targetType = execution.getChild().findAnyGenericExecutableType(context).getReturnType();
             }
+
             var = frameState.createValue(execution, targetType).nextName();
 
             LocalVariable fallbackVar;
@@ -3674,24 +3700,39 @@ public class FlatNodeGenFactory {
         return builder.build();
     }
 
+    private TypeGuard findBoxingEliminationGuard(SpecializationGroup group, NodeExecutionData execution) {
+        if (!boxingEliminationEnabled) {
+            return null;
+        }
+        TypeGuard guard = group.getTypeGuards().stream().filter((g) -> g.getSignatureIndex() == execution.getIndex()).findFirst().orElse(null);
+        if (guard == null) {
+            return null;
+        }
+        NodeExecutionData currentExecution = node.getChildExecutions().get(guard.getSignatureIndex());
+        if (plugs.canBoxingEliminateType(currentExecution, guard.getType())) {
+            return guard;
+        }
+        return null;
+    }
+
     private CodeTree createAssignExecuteChild(FrameState originalFrameState, FrameState frameState, CodeTreeBuilder parent, NodeExecutionData execution, ExecutableTypeData forType,
                     LocalVariable targetValue) {
         CodeTreeBuilder builder = parent.create();
 
-        ChildExecutionResult executeChild = createExecuteChild(builder, originalFrameState, frameState, execution, targetValue);
+        ChildExecutionResult executeChild = plugs.createExecuteChild(this, builder, originalFrameState, frameState, execution, targetValue);
         builder.tree(createTryExecuteChild(targetValue, executeChild.code, true, executeChild.throwsUnexpectedResult));
         builder.end();
         if (executeChild.throwsUnexpectedResult) {
             builder.startCatchBlock(types.UnexpectedResultException, "ex");
-            builder.tree(createTransferToInterpreterAndInvalidate());
-            FrameState slowPathFrameState = originalFrameState.copy();
+            builder.tree(plugs.createTransferToInterpreterAndInvalidate());
+            FrameState slowPathFrameState = originalFrameState.copy(NodeExecutionMode.SLOW_PATH);
             slowPathFrameState.setValue(execution, targetValue.makeGeneric(context).accessWith(CodeTreeBuilder.singleString("ex.getResult()")));
 
             ExecutableTypeData delegateType = node.getGenericExecutableType(forType);
             boolean found = false;
             for (NodeExecutionData otherExecution : node.getChildExecutions()) {
                 if (found) {
-                    LocalVariable childEvaluatedValue = slowPathFrameState.createValue(otherExecution, genericType);
+                    LocalVariable childEvaluatedValue = slowPathFrameState.createValue(otherExecution, node.getGenericType(otherExecution));
                     builder.tree(createAssignExecuteChild(slowPathFrameState.copy(), slowPathFrameState, builder, otherExecution, delegateType, childEvaluatedValue));
                     slowPathFrameState.setValue(otherExecution, childEvaluatedValue);
                 } else {
@@ -3718,7 +3759,7 @@ public class FlatNodeGenFactory {
         return new ChildExecutionResult(result, executableType.hasUnexpectedValue() || needsCastTo(sourceType, targetType));
     }
 
-    private ChildExecutionResult createExecuteChild(CodeTreeBuilder parent, FrameState originalFrameState, FrameState frameState, NodeExecutionData execution, LocalVariable target) {
+    public ChildExecutionResult createExecuteChild(CodeTreeBuilder parent, FrameState originalFrameState, FrameState frameState, NodeExecutionData execution, LocalVariable target) {
 
         ChildExecutionResult result;
         if (!typeSystem.hasImplicitSourceTypes(target.getTypeMirror())) {
@@ -3825,6 +3866,9 @@ public class FlatNodeGenFactory {
     private List<ExecutableTypeData> filterExecutableTypes(List<ExecutableTypeData> executableTypes, List<SpecializationData> specializations) {
         Set<TypeMirror> specializedReturnTypes = new HashSet<>();
         for (SpecializationData specialization : specializations) {
+            for (SpecializationData boxingOverload : specialization.getBoxingOverloads()) {
+                specializedReturnTypes.add(boxingOverload.getReturnType().getType());
+            }
             specializedReturnTypes.add(specialization.getReturnType().getType());
         }
 
@@ -4108,6 +4152,10 @@ public class FlatNodeGenFactory {
             executable = new CodeExecutableElement(modifiers(PUBLIC), returnType, methodName);
         }
 
+        for (VariableElement arg : plugs.additionalArguments()) {
+            executable.addParameter(arg);
+        }
+
         DeclaredType unexpectedResult = types.UnexpectedResultException;
         Iterator<TypeMirror> thrownTypes = executable.getThrownTypes().iterator();
         while (thrownTypes.hasNext()) {
@@ -4155,10 +4203,19 @@ public class FlatNodeGenFactory {
 
     private boolean needsUnexpectedResultException(ExecutableTypeData executedType) {
         if (!executedType.hasUnexpectedValue()) {
+            // unexpected result is not compatible
             return false;
         }
 
         if (isSubtypeBoxed(context, executeAndSpecializeType.getReturnType(), executedType.getReturnType())) {
+            for (SpecializationData specialization : node.getReachableSpecializations()) {
+                SpecializationData overload = specialization.lookupBoxingOverload(executedType);
+                if (overload != null && overload.hasUnexpectedResultRewrite()) {
+                    return true;
+                }
+            }
+
+            // generic does not support boxed
             return false;
         } else {
             return true;
@@ -4211,6 +4268,7 @@ public class FlatNodeGenFactory {
             suppressed.retainAll(Arrays.asList("deprecated", "all"));
             GeneratorUtils.mergeSuppressWarnings(frameState.method, suppressed.toArray(new String[suppressed.size()]));
         }
+
         ExecutableElement targetMethod = specialization.getMethod();
         if (targetMethod == null) {
             builder.tree(createThrowUnsupported(builder, frameState));
@@ -4307,9 +4365,14 @@ public class FlatNodeGenFactory {
                 }
 
             }
+            SpecializationData boxingOverload = specialization.lookupBoxingOverload(forType);
+            if (boxingOverload != null) {
+                targetMethod = boxingOverload.getMethod();
+            }
+            CodeTree specializationCall = callMethod(frameState, null, targetMethod, bindings);
+            TypeMirror specializationReturnType = specialization.lookupBoxingOverloadReturnType(forType);
 
-            CodeTree specializationCall = callMethod(frameState, null, specialization.getMethod(), bindings);
-            if (isVoid(specialization.getMethod().getReturnType())) {
+            if (isVoid(specializationReturnType)) {
                 builder.statement(specializationCall);
                 if (isVoid(forType.getReturnType())) {
                     builder.returnStatement();
@@ -4318,7 +4381,7 @@ public class FlatNodeGenFactory {
                 }
             } else {
                 builder.startReturn();
-                builder.tree(expectOrCast(specialization.getReturnType().getType(), forType, specializationCall));
+                builder.tree(expectOrCast(specializationReturnType, forType, specializationCall));
                 builder.end();
             }
         }
@@ -4693,9 +4756,18 @@ public class FlatNodeGenFactory {
         boolean pushEncapsulatingNode = specialization.needsPushEncapsulatingNode();
         boolean extractInBoundary = specialization.needsTruffleBoundary();
 
-        if (extractInBoundary && specialization.needsVirtualFrame()) {
+        if (extractInBoundary) {
             // Cannot extract to boundary with a virtual frame.
-            extractInBoundary = false;
+            if (specialization.hasFrameParameter()) {
+                extractInBoundary = false;
+            } else {
+                for (VariableElement v : plugs.additionalArguments()) {
+                    if (ElementUtils.typeEquals(v.asType(), types.VirtualFrame) || ElementUtils.typeEquals(v.asType(), types.Frame)) {
+                        extractInBoundary = false;
+                        break;
+                    }
+                }
+            }
         }
 
         List<IfTriple> nonBoundaryGuards = new ArrayList<>();
@@ -4796,13 +4868,13 @@ public class FlatNodeGenFactory {
 
     private List<IfTriple> createSpecializationActive(FrameState frameState, SpecializationGroup group,
                     Collection<SpecializationData> allowedSpecializations) {
+        if (frameState.isSkipStateChecks()) {
+            return List.of();
+        }
         List<SpecializationData> specializations = group.collectSpecializations();
-        final boolean stateGuaranteed = group.isLast() && allowedSpecializations != null && allowedSpecializations.size() == 1 &&
-                        group.getAllSpecializations().size() == allowedSpecializations.size();
+        final boolean stateGuaranteed = isStateGuaranteed(group, allowedSpecializations);
         if (needsRewrites()) {
-
             CodeTree stateCheck = createSpecializationActiveCheck(frameState, specializations);
-
             CodeTree assertCheck = null;
             CodeTree stateGuard = null;
             if (stateGuaranteed) {
@@ -4812,7 +4884,12 @@ public class FlatNodeGenFactory {
             }
             return Arrays.asList(new IfTriple(null, stateGuard, assertCheck));
         }
-        return Collections.emptyList();
+        return List.of();
+    }
+
+    private static boolean isStateGuaranteed(SpecializationGroup group, Collection<SpecializationData> allowedSpecializations) {
+        return group.isLast() && allowedSpecializations != null && allowedSpecializations.size() == 1 &&
+                        group.getAllSpecializations().size() == allowedSpecializations.size();
     }
 
     private CodeTree createSpecializationActiveCheck(FrameState frameState, List<SpecializationData> specializations) {
@@ -4975,6 +5052,8 @@ public class FlatNodeGenFactory {
 
         builder.tree(multiState.createSet(innerFrameState, stateTransaction, StateQuery.create(SpecializationActive.class, specialization), true, false));
         builder.tree(multiState.persistTransaction(innerFrameState, stateTransaction));
+
+        plugs.notifySpecialize(this, builder, frameState, specialization);
 
         if (types.SlowPathListener != null && ElementUtils.isAssignable(specialization.getNode().getTemplateType().asType(), types.SlowPathListener)) {
             builder.startStatement().startCall("afterSpecialize").end().end();
@@ -5569,6 +5648,7 @@ public class FlatNodeGenFactory {
                     }
                 }
             }
+
             builder.tree((multiState.createSet(frameState, transaction,
                             StateQuery.create(SpecializationActive.class, excludesSpecializations), false, transaction == null)));
         }
@@ -5867,7 +5947,7 @@ public class FlatNodeGenFactory {
             exceptionTypes[i] = type;
         }
         builder.end().startCatchBlock(exceptionTypes, "ex");
-        builder.tree(createTransferToInterpreterAndInvalidate());
+        builder.tree(plugs.createTransferToInterpreterAndInvalidate());
         builder.tree(createExcludeThis(builder, frameState, forType, specialization));
 
         builder.end();
@@ -5896,6 +5976,7 @@ public class FlatNodeGenFactory {
         builder.tree(this.multiState.createSet(innerFrameState, transaction, activeQuery, false, false));
         builder.tree(this.multiState.createSet(innerFrameState, transaction, excludedQuery, true, false));
         builder.tree(this.multiState.persistTransaction(innerFrameState, transaction));
+        plugs.notifySpecialize(this, builder, innerFrameState, specialization);
 
         for (SpecializationData removeSpecialization : specializations) {
             if (useSpecializationClass(removeSpecialization)) {
@@ -5948,6 +6029,7 @@ public class FlatNodeGenFactory {
             if (!useSpecializationClass || !specialization.hasMultipleInstances()) {
                 // single instance remove
                 builder.tree((multiState.createSet(frameState, null, StateQuery.create(SpecializationActive.class, specialization), false, true)));
+                plugs.notifySpecialize(this, builder, frameState, specialization);
                 if (useSpecializationClass) {
                     builder.startStatement();
                     builder.tree(createSpecializationFieldAccess(frameState, specialization, true, true, null, CodeTreeBuilder.singleString("null")));
@@ -6049,15 +6131,20 @@ public class FlatNodeGenFactory {
             }
         }
 
-        CodeTree call = callMethod(frameState, null, targetType.getMethod(), bindings.toArray(new CodeTree[0]));
+        CodeTreeBuilder callBuilder = CodeTreeBuilder.createBuilder();
+        callBuilder.startCall("this", targetType.getMethod());
+        callBuilder.trees(bindings.toArray(new CodeTree[0]));
+        callBuilder.variables(plugs.additionalArguments());
+        callBuilder.end();
+
         CodeTreeBuilder builder = CodeTreeBuilder.createBuilder();
         builder = builder.create();
         if (isVoid(forType.getReturnType())) {
-            builder.statement(call);
+            builder.statement(callBuilder.build());
             builder.returnStatement();
         } else {
             builder.startReturn();
-            builder.tree(expectOrCast(returnType, forType, call));
+            builder.tree(expectOrCast(returnType, forType, callBuilder.build()));
             builder.end();
         }
         return builder.build();
@@ -6894,16 +6981,25 @@ public class FlatNodeGenFactory {
                 if (localVariable != null) {
                     bindings.put(variable, localVariable);
                 }
-            } else if (specialization.isNodeReceiverVariable(variable.getResolvedVariable())) {
-                CodeTree accessor = createNodeAccess(frameState, specialization);
-                if (substituteNodeWithSpecializationClass(specialization) && !frameState.mode.isUncached()) {
-                    String localName = createSpecializationLocalName(specialization);
-                    bindings.put(variable, new LocalVariable(types.Node, localName, accessor));
+            } else {
+                CodeTree tree = plugs.bindExpressionValue(frameState, variable);
+                if (tree != null) {
+                    bindings.put(variable, new LocalVariable(variable.getResolvedType(), "$bytecode", tree));
                 } else {
-                    bindings.put(variable, new LocalVariable(variable.getResolvedType(), "this", accessor));
+                    if (specialization.isNodeReceiverVariable(variable.getResolvedVariable())) {
+                        CodeTree accessor = createNodeAccess(frameState, specialization);
+                        if (substituteNodeWithSpecializationClass(specialization) && !frameState.mode.isUncached()) {
+                            String localName = createSpecializationLocalName(specialization);
+                            bindings.put(variable, new LocalVariable(types.Node, localName, accessor));
+                        } else {
+                            bindings.put(variable, new LocalVariable(variable.getResolvedType(), "this", accessor));
+                        }
+                    }
                 }
+
             }
         }
+
         return bindings;
     }
 
@@ -7545,12 +7641,12 @@ public class FlatNodeGenFactory {
         }
     }
 
-    private static class ChildExecutionResult {
+    public static class ChildExecutionResult {
 
         CodeTree code;
         final boolean throwsUnexpectedResult;
 
-        ChildExecutionResult(CodeTree code, boolean throwsUnexpectedResult) {
+        public ChildExecutionResult(CodeTree code, boolean throwsUnexpectedResult) {
             this.code = code;
             this.throwsUnexpectedResult = throwsUnexpectedResult;
         }
@@ -7702,7 +7798,7 @@ public class FlatNodeGenFactory {
         CodeTree createLoadFastPath(FrameState frameState, List<SpecializationData> specializations) {
             CodeTreeBuilder builder = CodeTreeBuilder.createBuilder();
             for (BitSet bitSet : getSets()) {
-                if (isRelevantForFastPath(bitSet, specializations)) {
+                if (isRelevantForFastPath(frameState, bitSet, specializations)) {
                     builder.tree(bitSet.createLoad(frameState));
                 }
             }
@@ -7720,8 +7816,8 @@ public class FlatNodeGenFactory {
             return builder.build();
         }
 
-        static boolean isRelevantForFastPath(BitSet bitSet, Collection<SpecializationData> usedSpecializations) {
-            if (bitSet.getStates().contains(StateQuery.create(SpecializationActive.class, usedSpecializations))) {
+        static boolean isRelevantForFastPath(FrameState frameState, BitSet bitSet, Collection<SpecializationData> usedSpecializations) {
+            if (!frameState.isSkipStateChecks() && bitSet.getStates().contains(StateQuery.create(SpecializationActive.class, usedSpecializations))) {
                 return true;
             }
             if (bitSet.getStates().contains(AOT_PREPARED)) {
@@ -7761,9 +7857,27 @@ public class FlatNodeGenFactory {
             return false;
         }
 
+        @SuppressWarnings("unused")
+        static boolean isRelevantForQuickening(BitSet bitSet, Collection<SpecializationData> usedSpecializations) {
+            if (bitSet.getStates().contains(StateQuery.create(SpecializationActive.class, usedSpecializations))) {
+                return true;
+            }
+            for (ImplicitCastState state : bitSet.getStates().queryStates(ImplicitCastState.class)) {
+                TypeGuard guard = state.key;
+                int signatureIndex = guard.getSignatureIndex();
+                for (SpecializationData specialization : usedSpecializations) {
+                    TypeMirror specializationType = specialization.getSignatureParameters().get(signatureIndex).getType();
+                    if (!state.node.getTypeSystem().lookupByTargetType(specializationType).isEmpty()) {
+                        return true;
+                    }
+                }
+            }
+            return false;
+        }
+
     }
 
-    static final class FrameState {
+    public static final class FrameState {
 
         private final FlatNodeGenFactory factory;
         private final Map<String, LocalVariable> values = new HashMap<>();
@@ -7778,6 +7892,14 @@ public class FlatNodeGenFactory {
             this.factory = factory;
             this.mode = mode;
             this.method = method;
+        }
+
+        public void setSkipStateChecks(boolean skipStateChecks) {
+            setBoolean("$stateChecks", skipStateChecks);
+        }
+
+        public boolean isSkipStateChecks() {
+            return getBoolean("$stateChecks", false);
         }
 
         public void addCaughtException(TypeMirror exceptionType) {
@@ -7894,7 +8016,11 @@ public class FlatNodeGenFactory {
         }
 
         public FrameState copy() {
-            FrameState copy = new FrameState(factory, mode, method);
+            return copy(this.mode);
+        }
+
+        public FrameState copy(NodeExecutionMode newMode) {
+            FrameState copy = new FrameState(factory, newMode, method);
             copy.values.putAll(values);
             copy.caughtTypes.addAll(caughtTypes);
             copy.directValues.putAll(directValues);
@@ -8000,6 +8126,10 @@ public class FlatNodeGenFactory {
                     builder.startGroup().tree(var.createReference()).end();
                 }
             }
+
+            for (VariableElement arg : factory.plugs.additionalArguments()) {
+                builder.variable(arg);
+            }
         }
 
         public void addParametersTo(CodeExecutableElement targetMethod, int varArgsThreshold, String... optionalNames) {
@@ -8020,6 +8150,9 @@ public class FlatNodeGenFactory {
                     }
                 }
             }
+            for (VariableElement arg : factory.plugs.additionalArguments()) {
+                targetMethod.addParameter(arg);
+            }
         }
 
         @Override
@@ -8029,7 +8162,7 @@ public class FlatNodeGenFactory {
 
     }
 
-    static final class LocalVariable {
+    public static final class LocalVariable {
 
         private final TypeMirror typeMirror;
         private final CodeTree accessorTree;
@@ -8119,7 +8252,7 @@ public class FlatNodeGenFactory {
 
     }
 
-    enum NodeExecutionMode {
+    public enum NodeExecutionMode {
 
         FAST_PATH,
         SLOW_PATH,
@@ -8142,6 +8275,63 @@ public class FlatNodeGenFactory {
             return this == FAST_PATH;
         }
 
+    }
+
+    public CodeTree createOnlyActive(FrameState frameState, List<SpecializationData> filteredSpecializations, Collection<SpecializationData> allSpecializations) {
+        CodeTreeBuilder b = CodeTreeBuilder.createBuilder();
+        CodeTree tree = multiState.createContainsOnly(frameState, 0, -1, StateQuery.create(SpecializationActive.class, filteredSpecializations),
+                        StateQuery.create(SpecializationActive.class, allSpecializations));
+        b.tree(tree);
+        if (!tree.isEmpty()) {
+            b.string(" && ");
+        }
+        b.tree(multiState.createContains(frameState,
+                        StateQuery.create(SpecializationActive.class, allSpecializations)));
+        return b.build();
+    }
+
+    public CodeTree createIsImplicitTypeStateCheck(FrameState frameState, TypeMirror targetType, TypeMirror specializationType, int signatureIndex) {
+        List<ImplicitCastData> casts = typeSystem.lookupByTargetType(specializationType);
+        if (casts.isEmpty()) {
+            return null;
+        }
+
+        long mask = 1;
+        if (!ElementUtils.typeEquals(targetType, specializationType)) {
+            for (ImplicitCastData cast : casts) {
+                mask = mask << 1;
+                if (ElementUtils.typeEquals(cast.getSourceType(), targetType)) {
+                    break;
+                }
+            }
+        }
+        CodeTreeBuilder b = new CodeTreeBuilder(null);
+        b.tree(multiState.createExtractInteger(frameState, StateQuery.create(ImplicitCastState.class, new TypeGuard(typeSystem, specializationType, signatureIndex))));
+        b.string(" == ");
+        b.string(BitSet.formatMask(mask, casts.size() + 1));
+        return b.build();
+    }
+
+    public void addQuickeningStateParametersTo(CodeExecutableElement method, FrameState frameState, Collection<SpecializationData> specializations) {
+        for (BitSet set : multiState.getSets()) {
+            if (!MultiStateBitSet.isRelevantForQuickening(set, specializations)) {
+                continue;
+            }
+
+            LocalVariable local = frameState.get(set.getName());
+            if (local != null) {
+                method.addParameter(local.createParameter());
+            }
+        }
+    }
+
+    public void loadQuickeningStateBitSets(CodeTreeBuilder b, FrameState frameState, Collection<SpecializationData> specializations) {
+        for (BitSet set : multiState.getSets()) {
+            if (!MultiStateBitSet.isRelevantForQuickening(set, specializations)) {
+                continue;
+            }
+            b.tree(set.createLoad(frameState));
+        }
     }
 
 }
